# tdd-lesson-2-mocking-vglad

./: CMakeLists.txt
include/: Customer.h  Money.h
src/: Customer.cpp
test/: TestCustomer.cpp  TestMoney.cpp  TestRentalController.cpp
test/mocks/: MockCustomer.h
